--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pets</title>
 </head>
 
 <body>
-    <a href="">Skip to Main Content</a>
+    <a href="#main-content">Skip to Main Content</a>
 
     <header>
         <nav>
@@ -20,7 +22,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main-content">
         <div>
             <h2>Peddie</h2>
             <img src="images/peddie.jpg" width="400" alt="A cute naughty golden retriever">
@@ -30,11 +32,12 @@
             <P>Peddie's intelligence and friendly demeanor make him a beloved member of his family and a source of joy
                 for everyone who knows him.</P>
             <h3>Photo Gallery</h3>
-            <img src="images/peddie_play.jpg" width="200" alt="Peddie is playing in the snow">
-            <img src="images/peddie_sleep.jpg" width="200" alt="Peddie loves sleeping on the couch">
-            <img src="images/peddie_smile.jpg" width="200" alt="Peddie has the sweetest in the world">
-            <img src="images/peddie_swim.jpg" width="200" alt="Peddie is swimming in a lake">
-
+            <div class="grid-container">
+                <img src="images/peddie_play.jpg" width="200" alt="Peddie is playing in the snow">
+                <img src="images/peddie_sleep.jpg" width="200" alt="Peddie loves sleeping on the couch">
+                <img src="images/peddie_smile.jpg" width="200" alt="Peddie has the sweetest in the world">
+                <img src="images/peddie_swim.jpg" width="200" alt="Peddie is swimming in a lake">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Swimming</li>
@@ -42,124 +45,126 @@
                 <li>Meeting new friends</li>
             </ul>
             <!-- Yiran Zheng -->
-        </div>
 
-        <div>
-            <h2>Bacon Q Dog</h2>
-            <img src="images/bacon.jpg" width="400" alt="Brown labradoodle wearing colorful lei">
+            <div>
+                <h2>Bacon Q Dog</h2>
+                <img src="images/bacon.jpg" width="400" alt="Brown labradoodle wearing colorful lei">
 
-            <p>Bacon Q. Dog is a 9yr old labradoodle. He prefers to spend his days lounging among the three different
-                beds/couches that his family has gifted him. He enjoys a walk or two around the neighborhood, as long as
-                he can pretend that he doesn't see any of the other animals to avoid the embarrassment of not wanting to
-                admit he has no wolf-like skills in chasing them.</p>
-            <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his
-                energy. He will place his toys on a mini couch and frantically drag the couch around, giving his toys "a
-                ride." There is also a lot of rolling. Lots and lots of rolling.</P>
-            <h3>Photo Gallery</h3>
-            <img src="images/bacon_bandana.JPG" width="200" alt="Brown labradoodle wearing an orange bandana">
-            <img src="images/bacon_graduation.JPG" width="200"
-                alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <video width="200" controls>
-                <source src="images/bacon_agility.mov">
-                Your browser does not support the video tag. This was a video of a girl and dog demonstrating a sit and
-                stay procedure
-            </video>
-            <img src="images/bacon_halloween.JPG" width="200" alt="Brown labradoodle wearing a pirate costume">
+                <p>Bacon Q. Dog is a 9yr old labradoodle. He prefers to spend his days lounging among the three
+                    different
+                    beds/couches that his family has gifted him. He enjoys a walk or two around the neighborhood, as
+                    long as
+                    he can pretend that he doesn't see any of the other animals to avoid the embarrassment of not
+                    wanting to
+                    admit he has no wolf-like skills in chasing them.</p>
+                <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his
+                    energy. He will place his toys on a mini couch and frantically drag the couch around, giving his
+                    toys "a
+                    ride." There is also a lot of rolling. Lots and lots of rolling.</P>
+                <h3>Photo Gallery</h3>
+                <img src="images/bacon_bandana.JPG" width="200" alt="Brown labradoodle wearing an orange bandana">
+                <img src="images/bacon_graduation.JPG" width="200"
+                    alt="Small labradoodle puppy wearing a graduation cap and gown">
+                <video width="200" controls>
+                    <source src="images/bacon_agility.mov">
+                    Your browser does not support the video tag. This was a video of a girl and dog demonstrating a sit
+                    and
+                    stay procedure
+                </video>
+                <img src="images/bacon_halloween.JPG" width="200" alt="Brown labradoodle wearing a pirate costume">
 
-            <h3>Likes</h3>
-            <ul>
-                <li>Belly rubs</li>
-                <li>Playing tug-of-war</li>
-                <li>Sneaking onto the couch</li>
-            </ul>
-            <!-- Colleen van Lent -->
+                <h3>Likes</h3>
+                <ul>
+                    <li>Belly rubs</li>
+                    <li>Playing tug-of-war</li>
+                    <li>Sneaking onto the couch</li>
+                </ul>
+                <!-- Colleen van Lent -->
 
-        </div>
+                <h2>Cody</h2>
+                <img src="images/cody.jpg" width="400" alt="Cody at home">
 
-        <div>
-            <h2>Cody</h2>
-            <img src="images/cody.jpg" width="400" alt="Cody at home">
+                <p>Cody is a 7yr old Pembroke Corgi. He was born in Cavalier Farms, Seattle. He prefers to spend his
+                    days lounging on the bean bag. Every day, he enjoys two walks around the neighborhood and likes to
+                    make friends with other doggie friends. If lucky enough, he might see the cyclist, but he is not
+                    allowed to give chase.</p>
+                <P>Cody loves traveling. He enjoys walking on the beach and taking sun naps. But he hates cold weather.
+                    He would like to stay at home lounging by the fireplace in winter.</P>
+                <h3>Photo Gallery</h3>
+                <img src="images/cody_play.jpg" width="200" alt="Cody lying on the ground making faces">
+                <img src="images/cody_deathvalley.jpg" width="200"
+                    alt="Cody visiting Badwater Basin in Death Valley National Park">
+                <img src="images/cody_sea.jpg" width="200" alt="Cody having a walk by the sea">
+                <img src="images/cody_fireplace.jpg" width="200" alt="Cody lounging by the fireplace in winter">
 
-            <p>Cody is a 7yr old Pembroke Corgi. He was born in Cavalier Farms, Seattle. He prefers to spend his
-                days lounging on the bean bag. Every day, he enjoys two walks around the neighborhood and likes to
-                make friends with other doggie friends. If lucky enough, he might see the cyclist, but he is not
-                allowed to give chase.</p>
-            <P>Cody loves traveling. He enjoys walking on the beach and taking sun naps. But he hates cold weather.
-                He would like to stay at home lounging by the fireplace in winter.</P>
-            <h3>Photo Gallery</h3>
-            <img src="images/cody_play.jpg" width="200" alt="Cody lying on the ground making faces">
-            <img src="images/cody_deathvalley.jpg" width="200"
-                alt="Cody visiting Badwater Basin in Death Valley National Park">
-            <img src="images/cody_sea.jpg" width="200" alt="Cody having a walk by the sea">
-            <img src="images/cody_fireplace.jpg" width="200" alt="Cody lounging by the fireplace in winter">
+                <h3>Likes</h3>
+                <ul>
+                    <li>Traveling</li>
+                    <li>Lounging</li>
+                    <li>Tennis balls</li>
+                </ul>
+                <!-- Yuqing Zhang -->
 
-            <h3>Likes</h3>
-            <ul>
-                <li>Traveling</li>
-                <li>Lounging</li>
-                <li>Tennis balls</li>
-            </ul>
-            <!-- Yuqing Zhang -->
-        </div>
+                <h2>Pluto</h2>
+                <img src="images/pluto.jpg" width="400" alt="White dog looking up">
 
-        <div>
-            <h2>Pluto</h2>
-            <img src="images/pluto.jpg" width="400" alt="White dog looking up">
+                <p>Pluto is a five year old rescue dog of an unknown breed. He was found wandering alone and taken to
+                    the Valley Humane Society where he found his new family. From a young age, Pluto always had a
+                    special personality, he was known for being very very lazy! He spends most of his time staring out
+                    the window to keep watch of his house. Don’t let the laziness fool you because Pluto defends his
+                    family from the mailman and squirrels every single day.</p>
+                <P>Aside from his job as defender of the house, Pluto likes to have fun. Pluto’s favorite part of the
+                    day is his daily walk. Sometimes he even gets to go to the park and meet his neighbors. He also
+                    loves his toy duck, and only his toy duck. As a dog, it's in his nature to hunt and so he makes sure
+                    to get some practice with his toy duck.</P>
+                <h3>Photo Gallery</h3>
+                <img src="images/pluto_cookie.JPG" width="200" alt="Pluto the dog standing up to eat a cookie">
+                <img src="images/pluto_sleeping.jpg" width="200" alt="Pluto sleeping on bed">
+                <img src="images/pluto_walk.jpg" width="200" alt="Pluto the dog on a walking trail">
+                <img src="images/pluto_sitting.jpg" width="200" alt="Pluto sitting and posed on top of a table">
 
-            <p>Pluto is a five year old rescue dog of an unknown breed. He was found wandering alone and taken to
-                the Valley Humane Society where he found his new family. From a young age, Pluto always had a
-                special personality, he was known for being very very lazy! He spends most of his time staring out
-                the window to keep watch of his house. Don’t let the laziness fool you because Pluto defends his
-                family from the mailman and squirrels every single day.</p>
-            <P>Aside from his job as defender of the house, Pluto likes to have fun. Pluto’s favorite part of the
-                day is his daily walk. Sometimes he even gets to go to the park and meet his neighbors. He also
-                loves his toy duck, and only his toy duck. As a dog, it's in his nature to hunt and so he makes sure
-                to get some practice with his toy duck.</P>
-            <h3>Photo Gallery</h3>
-            <img src="images/pluto_cookie.JPG" width="200" alt="Pluto the dog standing up to eat a cookie">
-            <img src="images/pluto_sleeping.jpg" width="200" alt="Pluto sleeping on bed">
-            <img src="images/pluto_walk.jpg" width="200" alt="Pluto the dog on a walking trail">
-            <img src="images/pluto_sitting.jpg" width="200" alt="Pluto sitting and posed on top of a table">
+                <h3>Likes</h3>
+                <ul>
+                    <li>Eating his bone</li>
+                    <li>Going to the beach</li>
+                    <li>His toy duck</li>
+                </ul>
+                <!-- Aditi Kagalkar -->
 
-            <h3>Likes</h3>
-            <ul>
-                <li>Eating his bone</li>
-                <li>Going to the beach</li>
-                <li>His toy duck</li>
-            </ul>
-            <!-- Aditi Kagalkar -->
-        </div>
+                <h2>Rocket</h2>
+                <img src="images/rocket_primary.jpg" width="400" alt="Cute, small and yellow pomeranian">
 
-        <div>
-            <h2>Rocket</h2>
-            <img src="images/rocket_primary.jpg" width="400" alt="Cute, small and yellow pomeranian">
+                <p>Rocket (also named huihui) is a 6-month pomeranian puppy with big eyes and a small, black cute nose.
+                    Rocket is named rocket because he runs so fast and energetic all day without even having some rest.
+                    Rocket loves to carry his little toy walking around the house and jumping towards my bed.</p>
+                <P>Rocket is friendly to all human beings. He will be a little shy at first, but will ‘say hi’ to you
+                    after a few seconds. He is also friendly to dogs, especially the small breed, because the large size
+                    dogs are hard for him to smell lol. If you meet rocket, don’t hesitate to say hi to him!! He will be
+                    super happy the whole day.</P>
+                <h3>Photo Gallery</h3>
+                <img src="images/rocket_dinner.jpg" width="200" alt="Rocket is eating his dinner">
+                <img src="images/rocket_wants_to_go_out.jpg" width="200" alt="Rocket wants to come out of the playpen">
+                <img src="images/rocket_childhood.jpg" width="200" alt="Rocket is in his childhood">
+                <video width="200" controls>
+                    <source src="images/rocket_kitchen_clip.mp4">
+                    Your browser does not support the video tag. This was a video of a girl and dog demonstrating a sit
+                    and
+                    stay procedure
+                </video>
 
-            <p>Rocket (also named huihui) is a 6-month pomeranian puppy with big eyes and a small, black cute nose.
-                Rocket is named rocket because he runs so fast and energetic all day without even having some rest.
-                Rocket loves to carry his little toy walking around the house and jumping towards my bed.</p>
-            <P>Rocket is friendly to all human beings. He will be a little shy at first, but will ‘say hi’ to you
-                after a few seconds. He is also friendly to dogs, especially the small breed, because the large size
-                dogs are hard for him to smell lol. If you meet rocket, don’t hesitate to say hi to him!! He will be
-                super happy the whole day.</P>
-            <h3>Photo Gallery</h3>
-            <img src="images/rocket_dinner.jpg" width="200" alt="Rocket is eating his dinner">
-            <img src="images/rocket_wants_to_go_out.jpg" width="200" alt="Rocket wants to come out of the playpen">
-            <img src="images/rocket_childhood.jpg" width="200" alt="Rocket is in his childhood">
-            <video width="200" controls>
-                <source src="images/rocket_kitchen_clip.mp4">
-                Your browser does not support the video tag. This was a video of a girl and dog demonstrating a sit
-                and
-                stay procedure
-            </video>
+                <h3>Likes</h3>
+                <ul>
+                    <li>Chewing bones</li>
+                    <li>Running</li>
+                    <li>Chasing</li>
+                </ul>
+                <!-- Huiyu Su -->
 
-            <h3>Likes</h3>
-            <ul>
-                <li>Chewing bones</li>
-                <li>Running</li>
-                <li>Chasing</li>
-            </ul>
-            <!-- Huiyu Su -->
-        </div>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
     </main>
 
 </body>
