--- a/travel.html
+++ b/travel.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="">Skip to Main Content</a>
+    <a href="#main-content">Skip to Main Content</a>
 
     <header>
         <nav>
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main-content">
         <div>
 
             <h2>Boston</h2>
