--- a/recipes.html
+++ b/recipes.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="">Skip to Main Content</a>
+    <a href="#main-content">Skip to Main Content</a>
 
     <header>
         <nav>
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main-content">
         <div>
             <h2>Guacamole</h2>
             <span>Origin: Mexican</span>
@@ -53,6 +53,7 @@
             <h3>Additional Food images</h3>
             <img src="images/guacamole_2.jpg" width="200" alt="Guacamole in a bowl">
             <img src="images/avocado_chips.jpg" width="200" alt="Chips and guacamole">
+            width="200" alt="Chocolate melting in a boiler">
             <img src="images/taco.jpg" width="200" alt="Guacamole in a taco">
 
             <!-- Yiran Zheng -->
@@ -86,6 +87,7 @@
             <h3>Additional Food images</h3>
             <img src="images/blat_2.jpg" width="200" alt="A BLAT sandwich is placed on a dish">
             <img src="images/ingredients.jpg" width="200" alt="Ingredients of BLAT sandwich">
+            width="200" alt="Chocolate melting in a boiler">
             <img src="images/blat_3.jpg" width="200" alt="A BLAT sandwich is made with multigrain bread">
 
             <!-- Yiran Zheng -->
